--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="profile-5.jpeg" alt="">
-                        <div class="text">Aradhika Sabarwal</div>
+                        <img src="pp.jpg" alt="">
+                        <div class="text">Shubham Koikala</div>
                         <p>Software Developer, Full Stack Developer with 2 yrs of experience. worked with <b>Amazon</b> as a project assitant. </p>
                     </div>
                 </div>
