--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="profile-2.jpeg" alt="">
+                        <img src="ee.jpg" alt="">
                         <div class="text">Daniel</div>
                         <p>Very hardworking , working experience of 4 yrs in the field of mass media and communication. Photography is my Passion . Had worked with US enterprise ltd. and Fedex. </p>
                     </div>
