--- a/index.html
+++ b/index.html
@@ -166,23 +166,23 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="ee.jpg" alt="">
-                        <div class="text">Daniel</div>
-                        <p>Very hardworking , working experience of 4 yrs in the field of mass media and communication. Photography is my Passion . Had worked with US enterprise ltd. and Fedex. </p>
+                        <img src="ee.jpeg" alt="">
+                        <div class="text">Madhav Kumar</div>
+                        <p>DEVOPS ENGINEER AT HIVER</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="profile-3.jpeg" alt="">
-                        <div class="text">Brittiny</div>
-                        <p>Create sales reports, detailing all transactions made in a day for the purpose of informing the management of individual sales progress.</p>
+                        <img src="w.jpeg" alt="">
+                        <div class="text">Pandit G</div>
+                        <p>Astrologer Palmist</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="profile-4.jpeg" alt="">
-                        <div class="text">Roggman</div>
-                        <p>Made significant contribution to the store's revenue by selling up to $40,000 during my tenure Gained recognition as an exemplary employee. Maintained a good customer relationship and enjoyed working with my coworkers on a daily.</p>
+                        <img src="q.jpeg" alt="">
+                        <div class="text">Aman</div>
+                        <p>Software Engineer</p>
                     </div>
                 </div>
                 
