--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="profile-1.jpg" alt="">
+                        <img src="y.jpeg" alt="">
                         <div class="text">Yamoon Kalel </div>
-                        <p>Team Lead , worked on various platform with 2 years of experience. Worked at <b>Capgimini</b> as a senior Developer.Very much fimiliar with Frontend , HTML, CSS and JavaScript.</p>
+                        <p>Team Leader<b>at Tech Deck</b> as a senior Developer.Very much fimiliar with Frontend , HTML, CSS and JavaScript.</p>
                     </div>
                 </div>
                 <div class="card">
